<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_options"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.kalisynth.slottcg.options"
    android:background="@android:color/holo_blue_dark">

    <TextView
        android:text="@string/optionstitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/optionslabel" />

    <RadioButton
        android:text="@string/musiclbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:id="@+id/musicrb"
        android:layout_below="@+id/optionslabel"
        android:layout_alignEnd="@+id/optionslabel" />

    <RadioButton
        android:text="@string/soundlbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/soundrb"
        android:layout_below="@+id/musicrb"
        android:layout_alignStart="@+id/musicrb"
        android:layout_marginStart="10dp" />

    <Button
        android:text="@string/removeads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/soundrb"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:id="@+id/removeadsbtn" />

    <Button
        android:text="@string/restoreplbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:id="@+id/restorebtn"
        android:layout_below="@+id/resetdatabtn"
        android:layout_toEndOf="@+id/soundrb" />

    <Button
        android:text="@string/resetdata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/resetdatabtn"
        android:layout_below="@+id/removeadsbtn"
        android:layout_alignEnd="@+id/removeadsbtn"
        android:layout_marginTop="12dp" />

    <Button
        android:text="@string/aboutbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/restorebtn"
        android:layout_alignStart="@+id/resetdatabtn"
        android:layout_marginTop="24dp"
        android:id="@+id/aboutbtn" />
</RelativeLayout>
