<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#274c77"
    tools:context="org.kalisynth.slottcg.MainMenu">

    <Button
        android:text="@string/playbtnstring"
        android:textColor="#eeeeee"
        android:textSize="30sp"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:background="@drawable/button_shape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_marginTop="39dp"
        android:id="@+id/playbtn"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/optionsbtnstring"
        android:textColor="#eeeeee"
        android:textSize="30sp"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:background="@drawable/button_shape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:id="@+id/optionsbtn"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/playbtn"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/howtobtnstring"
        android:textColor="#eeeeee"
        android:textSize="30sp"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:background="@drawable/button_shape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="5"
        android:layout_marginTop="48dp"
        android:id="@+id/howtoplaybtn"
        android:layout_below="@+id/optionsbtn"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/collectionbtnstring"
        android:textColor="#eeeeee"
        android:textSize="30sp"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:background="@drawable/button_shape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_marginTop="49dp"
        android:id="@+id/collectionbtn"
        android:layout_below="@+id/howtoplaybtn"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/gamename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#eeeeee"
        android:textSize="30sp"
        android:layout_marginBottom="12dp"
        android:id="@+id/textView"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:srcCompat="@drawable/settingicon"
        android:id="@+id/imageView"
        android:layout_alignTop="@+id/optionsbtn"
        android:layout_toEndOf="@+id/optionsbtn" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/playicon"
        android:layout_alignBottom="@+id/playbtn"
        android:layout_toStartOf="@+id/playbtn"
        android:layout_marginBottom="10dp"
        android:id="@+id/imageView2" />

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:srcCompat="@drawable/howicon"
        android:id="@+id/imageView3"
        android:layout_above="@+id/collectionbtn"
        android:layout_toStartOf="@+id/howtoplaybtn" />
</RelativeLayout>

<!-- Color Palette
 P- 274c77 S- c3d2d5 T- 6096ba W- eeeeee B- 424242 -->